@@ -64,6 +64,7 @@ Misc:
  - Debugger: Convert breakpoints and watchpoints from linked-lists to vectors
  - Qt: Added button for breaking into the GDB debugger
  - GBA BIOS: Finish implementing RegisterRamReset
+ - GBA: Allow jumping to OAM and palette RAM
 
 0.3.2: (2015-12-16)
 Bugfixes:
